completed-recreation(pc-web-view)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="index.css" /> 
+    <title>Leo Messi (@leomessi)</title>
+</head>
+    <body>
+        <img src="image.png" class="logo"/>
+        <div class ="line-one"></div>
+        <div class="header">
+            <div class="profile-image"c>
+                <img src="messi.jpg" alt="profile picture" class="picture-properties"/>
+            </div>
+            <div class="info-box">
+                <div class="user-info">
+                    <p class="user-name">leomessi</p>
+                    <img src="verified_7641727.png" alt="verified badge" class="badge"/>
+                    <div class ="header-buttons">
+                        <button class="buttons" type="button">Follow</button>
+                        <button class="buttons" type="button">Message</button>
+                    </div>
+                </div>
+                <div class="user-stats">
+                    <p>1,268 posts</p>
+                    <p>504M followers</p>
+                    <p>326 following</p>
+                </div>
+                <div class="about-user">
+                    <p>Leo Messi </p>
+                    <p>Athlete</p>
+                    <p>Bienvenidos a la cuenta oficial de Instagram de Leo Messi / Welcome to the official Leo Messi Instagram account</p>
+                </div>
+            </div>
+            <div class="stories">
+                <img src="1.jpg" class="story-properties"/>
+                <img src="2.jpg" class="story-properties" />
+                <img src="3.jpg" class="story-properties"/>
+            </div>
+            <div class="story-captions">
+                <p>Selección</p>
+                <p>FCB</p>
+                <p>familia</p>
+            </div>
+        </div>
+        <div class="line-two"></div>
+        <div class="user-content">
+            <p>POSTS</p>
+            <p>REELS</p>
+            <p>TAGGED</p>
+        </div>
+        <div class="images">
+            <img src="messi_one.png" class="image-properties"/>
+            <img src="messi_two.png" class="image-properties"/>
+            <img src="messi_three.png" class="image-properties"/>
+        </div>
+    </body>
+</html>
